--- a/src/composer.json
+++ b/src/composer.json
@@ -13,6 +13,7 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=8.0",
+        "firebase/php-jwt": "^6.9",
         "hyperf/amqp": "~3.0.0",
         "hyperf/async-queue": "~3.0.0",
         "hyperf/cache": "~3.0.0",
