--- a/src/composer.json
+++ b/src/composer.json
@@ -23,7 +23,7 @@
         "hyperf/database": "~3.1.0",
         "hyperf/db-connection": "~3.1.0",
         "hyperf/elasticsearch": "~3.1.0",
-        "hyperf/engine": "^2.10",
+        "hyperf/engine": "^2.11",
         "hyperf/framework": "~3.1.0",
         "hyperf/guzzle": "~3.1.0",
         "hyperf/http-server": "~3.1.0",
@@ -37,19 +37,20 @@
         "hyperf/rpc": "~3.1.0",
         "hyperf/rpc-client": "~3.1.0",
         "hyperf/rpc-server": "~3.1.0",
-        "hyperf/swagger": "~3.1.0",
+        "hyperf/swagger": "^3.1",
         "hyperf/tracer": "~3.1.0",
         "hyperf/utils": "~3.1.0",
         "hyperf/validation": "~3.1.0",
-        "ramsey/uuid": "^4.7"
+        "ramsey/uuid": "^4.7",
+        "zircote/swagger-php": "^4.11"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.52",
+        "friendsofphp/php-cs-fixer": "^3.64",
         "hyperf/devtool": "~3.1.0",
         "hyperf/testing": "~3.1.0",
         "hyperf/watcher": "~3.1.0",
         "mockery/mockery": "^1.6",
-        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan": "^1.12",
         "swoole/ide-helper": "^5.1"
     },
     "suggest": {
