update/2025-03: Update project

--- a/src/composer.json
+++ b/src/composer.json
@@ -12,43 +12,43 @@
     "description": "A coroutine framework that focuses on hyperspeed and flexible, specifically use for build microservices and middlewares.",
     "license": "Apache-2.0",
     "require": {
-        "php": ">=8.3",
-        "hyperf/amqp": "~3.1.0",
-        "hyperf/async-queue": "~3.1.0",
-        "hyperf/cache": "~3.1.0",
-        "hyperf/command": "~3.1.0",
-        "hyperf/config": "~3.1.0",
-        "hyperf/constants": "~3.1.0",
-        "hyperf/database": "~3.1.0",
-        "hyperf/db-connection": "~3.1.0",
-        "hyperf/elasticsearch": "~3.1.0",
-        "hyperf/framework": "~3.1.0",
-        "hyperf/guzzle": "~3.1.0",
-        "hyperf/http-server": "~3.1.0",
-        "hyperf/json-rpc": "~3.1.0",
-        "hyperf/logger": "~3.1.0",
-        "hyperf/memory": "~3.1.0",
-        "hyperf/model-cache": "~3.1.0",
-        "hyperf/process": "~3.1.0",
-        "hyperf/redis": "~3.1.0",
-        "hyperf/resource": "~3.1.0",
-        "hyperf/rpc": "~3.1.0",
-        "hyperf/rpc-client": "~3.1.0",
-        "hyperf/rpc-server": "~3.1.0",
-        "hyperf/swagger": "~3.1.0",
-        "hyperf/tracer": "~3.1.0",
-        "hyperf/utils": "~3.1.0",
-        "hyperf/validation": "~3.1.0",
-        "hyperf/engine": "^2.13",
+        "php": ">=8.4",
+        "hyperf/amqp": "^3.2",
+        "hyperf/async-queue": "^3.2",
+        "hyperf/cache": "^3.2",
+        "hyperf/command": "^3.2",
+        "hyperf/config": "^3.2",
+        "hyperf/constants": "^3.2",
+        "hyperf/database": "^3.2",
+        "hyperf/db-connection": "^3.2",
+        "hyperf/elasticsearch": "^3.2",
+        "hyperf/framework": "^3.2",
+        "hyperf/guzzle": "^3.2",
+        "hyperf/http-server": "^3.2",
+        "hyperf/json-rpc": "^3.2",
+        "hyperf/logger": "^3.2",
+        "hyperf/memory": "^3.1",
+        "hyperf/model-cache": "^3.2",
+        "hyperf/process": "^3.2",
+        "hyperf/redis": "^3.2",
+        "hyperf/resource": "^3.2",
+        "hyperf/rpc": "^3.2",
+        "hyperf/rpc-client": "^3.2",
+        "hyperf/rpc-server": "^3.2",
+        "hyperf/swagger": "^3.2",
+        "hyperf/tracer": "^3.2",
+        "hyperf/utils": "^3.2",
+        "hyperf/validation": "^3.2",
+        "hyperf/engine": "^2.14",
         "firebase/php-jwt": "^6.11",
         "ramsey/uuid": "^4.7",
         "zircote/swagger-php": "^4.11"
     },
     "require-dev": {
-        "hyperf/devtool": "~3.1.0",
-        "hyperf/testing": "~3.1.0",
-        "hyperf/watcher": "~3.1.0",
-        "friendsofphp/php-cs-fixer": "^3.70",
+        "hyperf/devtool": "^3.2",
+        "hyperf/testing": "^3.2",
+        "hyperf/watcher": "^3.2",
+        "friendsofphp/php-cs-fixer": "^3.75",
         "mockery/mockery": "^1.6",
         "phpstan/phpstan": "^1.12",
         "swoole/ide-helper": "^5.1"
@@ -75,7 +75,10 @@
     "prefer-stable": true,
     "config": {
         "optimize-autoloader": true,
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     },
     "extra": [],
     "scripts": {
